Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36364

qtbase/examples/widgets/mainwindows/mainwindow example crashes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.3.0
    • 5.2.0
    • Examples and Demos
    • Windows Vista 64 bit
      Windows 7 64 bit
    • Avoid crash in QtGui: bc8cf62797b33d62f963c2d09d182e0b1f01f120 (dev, 3.2.2014, 5.3), Use mouse release in example: 59892468c95946ae3c3c3360e46d39bd62d8b9ea (dev, 10.2.2014, 5.3)

      1. Run the Main Window example (examples\widgets\mainwindows\mainwindow\mainwindow.pro).
      2. Double-click the middle button of the "Blue Dock Widget".

        The example crashes.

      Found by Henri.

        1. mainwindow.png
          mainwindow.png
          5 kB
        2. stacktrace.txt
          1 kB
        3. qtbug36364.log
          0.7 kB
        4. qtbug36364_diag.patch
          4 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes