QGuiApplication: Check if window exists before sending double click event.

Task-number: QTBUG-36364

Change-Id: I0be40e8f920f0210ba4e99e83d138f82ce3a69f2
Reviewed-by: J-P Nurmi <jpnurmi@digia.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>

cregit: bc8cf62797b33d62f963c2d09d182e0b1f01f120 https://github.com/qt/qtbase/commit/bc8cf62797b33d62f963c2d09d182e0b1f01f120